index page layout

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <section class="user">
           <h2 class="visually-hidden">Пользовательское меню</h2>
           <ul class="user__navigation">
-            <li class="user__navigation-login"><a href="#">Войти</a></li>
-            <li class="user__navigation-registration"><a href="#">Регистрация</a></li>
+            <li class="user__navigation-login"><a href="#" class="user__navigation-login-link">Войти</a></li>
+            <li class="user__navigation-registration"><a href="#" class="user__navigation-login-link">Регистрация</a></li>
           </ul>
         </section>
         <nav class="main-navigation">
