--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="substrate">
       <div class="container">
         <div class="title">
-          <p class="title__description">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+          <h1 class="title__description">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         </div>
         <section class="contacts">
           <h2 class="visually-hidden">Контактные данные</h2>
