fix links index,catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <div class="container container_center">
-      <a class="header__logo">Техномарт</a>
+      <a href="index.html" class="header__logo">Техномарт</a>
       <form class="search" action="#" method="GET">
         <label class="visually-hidden" for="search">Поиск:</label>
         <input class="search__input" id="search" type="search" name="search" placeholder="Поиск:">
