--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <nav class="main-navigation">
           <ul class="main-navigation__list">
-            <li class="main-navigation__list-item"><a href="#" class="main-navigation__list-link">Главная</a></li>
+            <li class="main-navigation__list-item"><a class="main-navigation__list-link">Главная</a></li>
             <li class="main-navigation__list-item"><a href="#" class="main-navigation__list-link">Компания</a></li>
             <li class="main-navigation__list-item"><a href="catalog.html" class="main-navigation__list-link">Каталог</a></li>
             <li class="main-navigation__list-item"><a href="#" class="main-navigation__list-link">Новости</a></li>
