removed div and added content img

--- a/catalog.html
+++ b/catalog.html
@@ -23,9 +23,7 @@
     </div>
     <div class="substrate">
       <div class="container">
-        <div class="title">
-          <h1 class="title__description">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-        </div>
+        <h1 class="description">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         <section class="contacts">
           <h2 class="visually-hidden">Контактные данные</h2>
           <p class="contacts__phone">+7 (812) 555-05-55</p>
@@ -98,121 +96,121 @@
       </section>
       <section class="catalog-product">
         <h2 class="visually-hidden">Каталог товаров</h2>
-        <article class="perforator">
+        <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
-          <section class="perforator__about">
-            <img class="perforator__image" src="http://placehold.it/150x100" alt="Перфоратор BOSCH BFG 3000">
-            <h3 class="perforator__name">Перфоратор BOSCH BFG 3000</h3>
-            <span class="perforator__discount">22500 Р.</span>
-            <p class="perforator__price">15500 Р.</p>
+          <section class="product__about">
+            <img class="product__image" src="img/bosh-bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <h3 class="product__name">Перфоратор BOSCH BFG 3000</h3>
+            <span class="product__discount">22500 Р.</span>
+            <p class="product__price">15500 Р.</p>
           </section>
-          <div class="perforator__purchase">
-            <button class="perforator__purchase-buy">Купить</button>
-            <button class="perforator__purchase-bookmark">В закладки</button>
+          <div class="product__purchase">
+            <button class="product__purchase-buy">Купить</button>
+            <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
-        <article class="perforator">
+        <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
-          <section class="perforator__about">
-            <img class="perforator__image" src="http://placehold.it/150x100" alt="Перфоратор BOSCH BFG 6000">
-            <h3 class="perforator__name">Перфоратор BOSCH BFG 6000</h3>
-            <span class="perforator__discount">30500 Р.</span>
-            <p class="perforator__price">25500 Р.</p>
+          <section class="product__about">
+            <img class="product__image" src="img/bosh-bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <h3 class="product__name">Перфоратор BOSCH BFG 6000</h3>
+            <span class="product__discount">30500 Р.</span>
+            <p class="product__price">25500 Р.</p>
           </section>
-          <div class="perforator__purchase">
-            <button class="perforator__purchase-buy">Купить</button>
-            <button class="perforator__purchase-bookmark">В закладки</button>
+          <div class="product__purchase">
+            <button class="product__purchase-buy">Купить</button>
+            <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
-        <article class="perforator perforator_new">
+        <article class="product product_new">
           <h2 class="visually-hidden">Описание товара</h2>
-          <section class="perforator__about">
-            <img class="perforator__image" src="http://placehold.it/150x100" alt="Перфоратор BOSCH BFG 2000">
-            <h3 class="perforator__name">Перфоратор BOSCH BFG 2000</h3>
-            <span class="perforator__discount perforator__discount_visually-hidden"></span>
-            <p class="perforator__price">12500 Р.</p>
+          <section class="product__about">
+            <img class="product__image" src="img/bosh-bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <h3 class="product__name">Перфоратор BOSCH BFG 2000</h3>
+            <span class="product__discount product__discount_visually-hidden"></span>
+            <p class="product__price">12500 Р.</p>
           </section>
-          <div class="perforator__purchase">
-            <button class="perforator__purchase-buy">Купить</button>
-            <button class="perforator__purchase-bookmark">В закладки</button>
+          <div class="product__purchase">
+            <button class="product__purchase-buy">Купить</button>
+            <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
-        <article class="perforator">
+        <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
-          <section class="perforator__about">
-            <img class="perforator__image" src="http://placehold.it/150x100" alt="Перфоратор BOSCH BFG 3000">
-            <h3 class="perforator__name">Перфоратор BOSCH BFG 3000</h3>
-            <span class="perforator__discount">22500 Р.</span>
-            <p class="perforator__price">15500 Р.</p>
+          <section class="product__about">
+            <img class="product__image" src="img/bosh-bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <h3 class="product__name">Перфоратор BOSCH BFG 3000</h3>
+            <span class="product__discount">22500 Р.</span>
+            <p class="product__price">15500 Р.</p>
           </section>
-          <div class="perforator__purchase">
-            <button class="perforator__purchase-buy">Купить</button>
-            <button class="perforator__purchase-bookmark">В закладки</button>
+          <div class="product__purchase">
+            <button class="product__purchase-buy">Купить</button>
+            <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
-        <article class="perforator perforator_new">
+        <article class="product product_new">
           <h2 class="visually-hidden">Описание товара</h2>
-          <section class="perforator__about">
-            <img class="perforator__image" src="http://placehold.it/150x100" alt="Перфоратор BOSCH BFG 6000">
-            <h3 class="perforator__name">Перфоратор BOSCH BFG 6000</h3>
-            <span class="perforator__discount">30500 Р.</span>
-            <p class="perforator__price">25500 Р.</p>
+          <section class="product__about">
+            <img class="product__image" src="img/bosh-bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <h3 class="product__name">Перфоратор BOSCH BFG 6000</h3>
+            <span class="product__discount">30500 Р.</span>
+            <p class="product__price">25500 Р.</p>
           </section>
-          <div class="perforator__purchase">
-            <button class="perforator__purchase-buy">Купить</button>
-            <button class="perforator__purchase-bookmark">В закладки</button>
+          <div class="product__purchase">
+            <button class="product__purchase-buy">Купить</button>
+            <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
-        <article class="perforator">
+        <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
-          <section class="perforator__about">
-            <img class="perforator__image" src="http://placehold.it/150x100" alt="Перфоратор BOSCH BFG 2000">
-            <h3 class="perforator__name">Перфоратор BOSCH BFG 2000</h3>
-            <span class="perforator__discount perforator__discount_visually-hidden"></span>
-            <p class="perforator__price">12500 Р.</p>
+          <section class="product__about">
+            <img class="product__image" src="img/bosh-bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <h3 class="product__name">Перфоратор BOSCH BFG 2000</h3>
+            <span class="product__discount product__discount_visually-hidden"></span>
+            <p class="product__price">12500 Р.</p>
           </section>
-          <div class="perforator__purchase">
-            <button class="perforator__purchase-buy">Купить</button>
-            <button class="perforator__purchase-bookmark">В закладки</button>
+          <div class="product__purchase">
+            <button class="product__purchase-buy">Купить</button>
+            <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
-        <article class="perforator perforator_new">
+        <article class="product product_new">
           <h2 class=" visually-hidden">Описание товара</h2>
-          <section class="perforator__about">
-            <img class="perforator__image" src="http://placehold.it/150x100" alt="Перфоратор BOSCH BFG 3000">
-            <h3 class="perforator__name">Перфоратор BOSCH BFG 3000</h3>
-            <span class="perforator__discount">22500 Р.</span>
-            <p class="perforator__price">15500 Р.</p>
+          <section class="product__about">
+            <img class="product__image" src="img/bosh-bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <h3 class="product__name">Перфоратор BOSCH BFG 3000</h3>
+            <span class="product__discount">22500 Р.</span>
+            <p class="product__price">15500 Р.</p>
           </section>
-          <div class="perforator__purchase">
-            <button class="perforator__purchase-buy">Купить</button>
-            <button class="perforator__purchase-bookmark">В закладки</button>
+          <div class="product__purchase">
+            <button class="product__purchase-buy">Купить</button>
+            <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
-        <article class="perforator">
+        <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
-          <section class="perforator__about">
-            <img class="perforator__image" src="http://placehold.it/150x100" alt="Перфоратор BOSCH BFG 6000">
-            <h3 class="perforator__name">Перфоратор BOSCH BFG 6000</h3>
-            <span class="perforator__discount">30500 Р.</span>
-            <p class="perforator__price">25500 Р.</p>
+          <section class="product__about">
+            <img class="product__image" src="img/bosh-bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <h3 class="product__name">Перфоратор BOSCH BFG 6000</h3>
+            <span class="product__discount">30500 Р.</span>
+            <p class="product__price">25500 Р.</p>
           </section>
-          <div class="perforator__purchase">
-            <button class="perforator__purchase-buy">Купить</button>
-            <button class="perforator__purchase-bookmark">В закладки</button>
+          <div class="product__purchase">
+            <button class="product__purchase-buy">Купить</button>
+            <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
-        <article class="perforator">
+        <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
-          <section class="perforator__about">
-            <img class="perforator__image" src="http://placehold.it/150x100" alt="Перфоратор BOSCH BFG 2000">
-            <h3 class="perforator__name">Перфоратор BOSCH BFG 2000</h3>
-            <span class="perforator__discount perforator__discount_visually-hidden"></span>
-            <p class="perforator__price">12500 Р.</p>
+          <section class="product__about">
+            <img class="product__image" src="img/bosh-bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <h3 class="product__name">Перфоратор BOSCH BFG 2000</h3>
+            <span class="product__discount product__discount_visually-hidden"></span>
+            <p class="product__price">12500 Р.</p>
           </section>
-          <div class="perforator__purchase">
-            <button class="perforator__purchase-buy">Купить</button>
-            <button class="perforator__purchase-bookmark">В закладки</button>
+          <div class="product__purchase">
+            <button class="product__purchase-buy">Купить</button>
+            <button class="product__purchase-bookmark">В закладки</button>
           </div>
         </article>
       </section>
