--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     </div>
     <div class="substrate">
       <div class="container">
-        <div class="title">
-          <h1 class="title__description">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-        </div>
+        <h1 class="description">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         <section class="contacts">
           <h2 class="visually-hidden">Контактные данные</h2>
           <p class="contacts__phone">+7 (812) 555-05-55</p>
@@ -72,7 +70,7 @@
       <div class="about__contacts">
         <h3 class="about__contacts-title">Контакты</h3>
         <p class="about__contacts-pick-up">Вы можете забрать товар сами,заехав в наш офис:</p>
-        <img class="about__map" src="http://placehold.it/150x100" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+        <img class="about__map" src="img/map-small.png" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <button class="about__contacts-write-us">Заблудились? Напишите нам!</button>
       </div>
     </section>
