--- a/catalog.html
+++ b/catalog.html
@@ -99,7 +99,7 @@
         <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
           <section class="product__about">
-            <img class="product__image" src="img/bosh-bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img class="product__image" src="img/bosh-bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3 class="product__name">Перфоратор BOSCH BFG 3000</h3>
             <span class="product__discount">22500 Р.</span>
             <p class="product__price">15500 Р.</p>
@@ -112,7 +112,7 @@
         <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
           <section class="product__about">
-            <img class="product__image" src="img/bosh-bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img class="product__image" src="img/bosh-bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3 class="product__name">Перфоратор BOSCH BFG 6000</h3>
             <span class="product__discount">30500 Р.</span>
             <p class="product__price">25500 Р.</p>
@@ -125,7 +125,7 @@
         <article class="product product_new">
           <h2 class="visually-hidden">Описание товара</h2>
           <section class="product__about">
-            <img class="product__image" src="img/bosh-bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <img class="product__image" src="img/bosh-bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3 class="product__name">Перфоратор BOSCH BFG 2000</h3>
             <span class="product__discount product__discount_visually-hidden"></span>
             <p class="product__price">12500 Р.</p>
@@ -138,7 +138,7 @@
         <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
           <section class="product__about">
-            <img class="product__image" src="img/bosh-bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img class="product__image" src="img/bosh-bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3 class="product__name">Перфоратор BOSCH BFG 3000</h3>
             <span class="product__discount">22500 Р.</span>
             <p class="product__price">15500 Р.</p>
@@ -151,7 +151,7 @@
         <article class="product product_new">
           <h2 class="visually-hidden">Описание товара</h2>
           <section class="product__about">
-            <img class="product__image" src="img/bosh-bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img class="product__image" src="img/bosh-bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3 class="product__name">Перфоратор BOSCH BFG 6000</h3>
             <span class="product__discount">30500 Р.</span>
             <p class="product__price">25500 Р.</p>
@@ -164,7 +164,7 @@
         <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
           <section class="product__about">
-            <img class="product__image" src="img/bosh-bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <img class="product__image" src="img/bosh-bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3 class="product__name">Перфоратор BOSCH BFG 2000</h3>
             <span class="product__discount product__discount_visually-hidden"></span>
             <p class="product__price">12500 Р.</p>
@@ -177,7 +177,7 @@
         <article class="product product_new">
           <h2 class=" visually-hidden">Описание товара</h2>
           <section class="product__about">
-            <img class="product__image" src="img/bosh-bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img class="product__image" src="img/bosh-bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3 class="product__name">Перфоратор BOSCH BFG 3000</h3>
             <span class="product__discount">22500 Р.</span>
             <p class="product__price">15500 Р.</p>
@@ -190,7 +190,7 @@
         <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
           <section class="product__about">
-            <img class="product__image" src="img/bosh-bfg-6000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img class="product__image" src="img/bosh-bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3 class="product__name">Перфоратор BOSCH BFG 6000</h3>
             <span class="product__discount">30500 Р.</span>
             <p class="product__price">25500 Р.</p>
@@ -203,7 +203,7 @@
         <article class="product">
           <h2 class="visually-hidden">Описание товара</h2>
           <section class="product__about">
-            <img class="product__image" src="img/bosh-bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <img class="product__image" src="img/bosh-bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3 class="product__name">Перфоратор BOSCH BFG 2000</h3>
             <span class="product__discount product__discount_visually-hidden"></span>
             <p class="product__price">12500 Р.</p>
