--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="about__contacts">
         <h3 class="about__contacts-title">Контакты</h3>
         <p class="about__contacts-pick-up">Вы можете забрать товар сами,заехав в наш офис:</p>
-        <img class="about__map" src="img/map-small.png" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+        <img class="about__map" src="img/map-small.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <button class="about__contacts-write-us">Заблудились? Напишите нам!</button>
       </div>
     </section>
