fix stylized index and catalog

--- a/catalog.html
+++ b/catalog.html
@@ -34,9 +34,9 @@
           <p class="contacts__phone">+7 (812) 555-05-55</p>
           <p class="contacts__address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </section>
-        <section class="user">
+        <section class="user-logged">
           <h2 class="visually-hidden">Пользовательское меню</h2>
-          <ul class="user__navigation">
+          <ul class="user__navigation-logged">
             <li class="user__navigation-logged-in"><a href="#" class="user__navigation-logged-in-link">Равшан
                 Джамшутович</a>
               <a href="#" class="user__navigation-out-link" aria-label="Выйти"></a></li>
